20230504 공부 : CORS 처리, Pinia 초기 작업

--- a/학원배운거정리/23주차.md
+++ b/학원배운거정리/23주차.md
@@ -78,3 +78,15 @@ public interface MemberRepository extends JpaRepository<Member, Integer> {
 
 - url에 맞는 role에게만 허용하라.
 - anyRequest().permitAll : 그냥 다
+
+## 5월 4일 목요일
+
+1. CORS 처리
+
+2. async, await
+
+3. pinia
+
+4. 컴포넌트간의 전역적인 객체가 공유가 되어야 할 텐데, 객체 자체로 export가 되고 있고 공유가 가능한지, 바뀐 값이 또 적용이 바로 되는지.
+
+5. 로그인된 상태가 확인이 되어야 한다.
