20230509 공부 : 사이트권한관리 및 오류페이지접속

--- a/학원배운거정리/24주차.md
+++ b/학원배운거정리/24주차.md
@@ -21,3 +21,50 @@
 6. router - before
 
 - 해당 링크를 가기 전에 들리도록 하는 지점.
+
+## 05.09 화요일
+
+1. vue-router의 useRoute
+
+- 라우팅의 정보에 대해서 알 수 있다.
+
+2. 권한에 따른 사이트 입장.
+
+- 한 회원이 가지는 role이 다양한 경우에는 배열에 저장하여 값이 있는지 확인한 후에 연결되도록한다.
+
+3. 이상한 주소의 무차별난사를 했을경우에 나타낼 화면 구현.
+
+4. 굳이 페이지가 처음 로드될 때 필요없는, 꼭 필수적인 페이지들이 아닌 경우에는 해당 url을 불러올때 import 할 수 있도록 설정할 수 있다.
+
+```js
+import Layout from './inc/Layout.vue'
+import Login from './Login.vue'
+import Index from './Index.vue'
+
+// 여기서 미리 임포트 하는 것이 아니라
+// import Err403 from './error/403.vue'
+
+import NotFound from './error/404.vue'
+
+const root = {
+  path: '/',
+  component: Layout,
+  children: [
+    { path: 'index', component: Index },
+    { path: 'login', component: Login },
+    {
+      path: 'error',
+      // component에서 보는 것처럼 403 에러페이지로 링크될 때 import 하도록 해놨다.
+      children: [{ path: '403', component: () => import('./error/403.vue') }],
+    },
+    {
+      path: '/:pathMatch(.*)*',
+      component: NotFound,
+    },
+  ],
+}
+
+export default root
+```
+
+5. enter-from enter-to , leave-from leave0to
