--- a/학원배운거정리/24주차.md
+++ b/학원배운거정리/24주차.md
@@ -67,4 +67,8 @@ const root = {
 export default root
 ```
 
-5. enter-from enter-to , leave-from leave0to
+5. enter-from enter-to , leave-from leave-to
+
+## 05.10 수요일
+
+1.
