20230511 공부 : 면접관련

--- a/학원배운거정리/24주차.md
+++ b/학원배운거정리/24주차.md
@@ -72,3 +72,99 @@ export default root
 ## 05.10 수요일
 
 1.
+
+## 05.11 목요일
+
+1. 면접 준비 해보쟈
+
+- 객체지향프로그래밍
+
+  - 객체를 중점으로 둔 프로그래밍 방법론입니다.
+
+- 캡슐화
+
+  - 책임을 배분하는 것
+    "책임은 무엇인가요?"
+    코드가 책임.
+    메소드가 책임.
+  - 단순히 변수와 메소드들을 분류한 구조화는 기존에도 있었다.
+  -
+
+- 상속
+
+  - 캡슐끼리의 사용 관계
+  - Has a 상속
+    조립
+  - Is a 상속 (보통의 상속)
+    틀을 물려 받는 것..은 잘못되었고 틀로 사용하겠다 라는 표현이 맞는 표현이겠다.
+  - 상속의 단점??
+    나의 생각 : 캡슐화가 깨질 수 있다. (검색한 결과 중에 가장 눈에 들어왔던 점.)
+    선생님 말씀 : 고쳐야 할 틀이 너무 많을 수 있다. (오버로딩을 너무 많이 해야할 수도 있다.)
+
+- 쓰레드
+  - 실행 흐름의 최소 단위
+
+2. 문제들
+
+- 11번 static 키워드에 대해 설명하세요.
+
+  - 검색 전 : static : 정적 메소드?
+  - 검색 :
+    Java에서 static은 클래스에 속하는 변수 또는 메서드를 나타내는 키워드입니다. static 변수는 클래스에 한 번만 생성되며 클래스의 모든 인스턴스에서 공유됩니다. static 메서드는 클래스에 한 번만 생성되며 클래스의 인스턴스를 생성하지 않고도 호출할 수 있습니다.
+  - 선생님
+    전역화 시키는 키워드
+
+- 12번 오버로딩과 오버라이딩의 차이점에 대해 말해보세요
+
+  - 검색 전 : 메소드의 이름은 같지만 메소드의 행위가 다른 걸로 알고 있는데 차이점과 구별이 잘..
+  - 검색
+    Java에서 오버로딩은 메서드 이름이 같지만 매개변수 목록이 다른 메서드를 만드는 프로세스입니다. 오버라이딩은 메서드 이름과 매개변수 목록이 같지만 부모 클래스의 메서드를 재정의하는 자식 클래스의 메서드를 만드는 프로세스입니다.
+  - 오버로딩 : 메소드의 이름이 같은 것
+  - 오버라이딩 : 부모에게서 상속받은 메소드를 재정의하는 것
+
+- 13번 추상클래스와 인터페이스에 대해 설명하세요
+
+  - 추상클래스는.. abstract? 이걸로 알고 있고, 인터페이스는 구현해야 될 약속으로 알고 있음.
+  - 추상 클래스는 자식 클래스가 상속할 수 있는 클래스입니다. 추상 클래스는 객체를 생성하는 데 사용할 수 없지만 자식 클래스를 생성하는 데 사용할 수 있습니다. 추상 클래스는 공통 속성과 메서드가 있는 클래스를 정의하는 데 유용합니다.
+  - 선생님
+    추상화 -> 일반화 -> 공통분모화
+    - 집중화가 되고, 일괄처리가 된다.
+    - 인터페이스
+      분리형 부품의 결합을 위한 약속
+
+- 14번 제네릭이란 무엇인가요
+
+  - 컬렉션이 나오면서 필요성이 생겨 나왔던, 사용자가 정의할 수 있는 타입으로 알고 있다.
+  - 검색
+    Java 제네릭은 클래스, 인터페이스 및 메서드의 형식을 컴파일 타임에 지정하는 기능입니다. 이는 다음과 같은 여러 가지 장점이 있습니다.
+  - 선생님
+    형식인데, 아직 완성되지 않은 형식. 내가 데이터타입을 결정해주거나
+    제네릭 : 무엇이든 될 수 있는 형식.
+    타입을 넘겨받는 템플릿.()
+    래퍼클래스형식만으로. java에서의 템플릿이라기엔 쪼오끔 그렇고 c++의 템플릿을 자바 형태로(?)
+
+- 15번 배열과 ArrayList의 차이점
+
+  - 고정적인 길이를 가지고 있는 값의 나열된 저장소.
+  - 컬렉션
+    add,get 기능함수를 가지고 있는 데이터 저장소.
+  - arraylist
+    컬렉션의 기능을 가지고 있는 가변형인 저장소
+    추상 데이터 타입
+
+- 16번 stack, linkedList, list - 자료구조.
+
+  - 선생님
+    스택 : 데이터 구조(LIFO)
+    가운데가 관리가 많이 일어나는 구조는 배열을 사용하면 안된다. -> 링크드리스트의 필요성
+
+  - 자료구조는 개념적으로 아는 것으로도 충분하지만 알고리즘은 구현을 해야 하기 때문에
+  - 큐
+
+- 17번 자바 컬렉션프레임워크의 대표 인터페이스는 무엇이잇나요
+
+  - set, map, list
+
+- 18번 접근제어자
+  - private, default, protected, public
+  - protected : 자식까지. 자식에게 책임을 전가할 때
