--- a/학원배운거정리/24주차.md
+++ b/학원배운거정리/24주차.md
@@ -168,3 +168,38 @@ export default root
 - 18번 접근제어자
   - private, default, protected, public
   - protected : 자식까지. 자식에게 책임을 전가할 때
+
+## 05월 12일 금요일
+
+1. Google Login on Vue3
+
+2. OpenAuth
+
+3. 근래에는 Stateful한 인증방식이 좀 고전적인(?) 방법일 수 있다.
+
+4. 구글 클라리언트 아이디
+
+5. 면접
+
+- 20번
+
+  - hashtable
+    쓰레드와 연관
+    쓰레드가 안전하냐 하지 않느냐
+  - hashmap
+    key에 null 넣을 수 있음 (단 한번만)
+
+- 21번
+  객체의 직렬화..?
+
+- RESTful
+
+  - REST - Representational State
+    - 자원이 존재하는 구조적 표기
+  - 자원을 요청할때 사용할수잇는 표기법을 이용할 수 있는
+  - 자원을 REST방식으로 표현하고 있는
+
+- session : 기간
+  - 사용자가 서버를 이용하겠다고 할당받은 기간.
+- cookie
+  - 사용자가 저장하게 되는 값들을 클라리언트(브라우저)에 저장하는 것
