--- a/학원배운거정리/25주차.md
+++ b/학원배운거정리/25주차.md
@@ -13,3 +13,25 @@
 4. 구글 로그인 커스텀버튼에 따른 credential 정보
 
 5.
+
+## 05.17 수요일
+
+1. java 8 12 17
+
+- 우리는 8 과 17 넘나들면서 알아야 하는데
+  17은 좀 그렇고, 8과 9
+
+- 8에서 크게 추가 되고, 9에서 다듬기
+
+2. java 8에서 가장 핵심은 컬렉션과 데이터 분석
+
+3. Functional programming
+
+- 람다식은 함수형프로그래밍을 위한 표현식.
+- 자바에서만.
+
+4. Linux
+
+5. Unix
+
+6. 운영체제 : 소프퉤어를 실행하게 해주는 것.
