20230518 공부 : Stream, Linux

--- a/학원배운거정리/25주차.md
+++ b/학원배운거정리/25주차.md
@@ -34,4 +34,75 @@
 
 5. Unix
 
-6. 운영체제 : 소프퉤어를 실행하게 해주는 것.
+6. 운영체제 : 소프트웨어를 실행하게 해주는 것.
+
+---
+
+## 05.18 목요일
+
+---
+
+1. java.util.<b><u>stream</u></b>
+
+2. 스트림 생성
+
+- intermediate
+  - filtering , mapping, sotring
+- terminal
+
+3. Stream API
+
+- No storage
+  - conveys elements
+- Functional in cature
+  - does not modify its source
+- Laziness-seeking
+  - lazily, exposiong opprtunities for optimizations
+- Posiibly unbounded
+  - While collections have a finite size, streams need not.
+  - 어차피 저장소가 아니라서, 저장소에 저장되어 있는 것을 뽑아올 뿐.
+- Consumable
+
+  - A stream are only visited once
+  - 한 번 사용되면 끝
+
+4. 데이터 변환 -> 맵핑과 리듀싱
+
+5. shell
+
+- os는 여러 애플리케이션을 깔아놓고 준비 중.
+- 사용자가 만질 수 있는건 껍데기!
+- os가 준비한 인터페이스 -> shell
+- 탐색기가 두번째 shell (마우스를 이용한)
+
+6. 쉘의 종류
+
+- bash shell : Bourn Again Shell
+  - 유닉스의 유료화에 따른 최초의 유닉스 쉘인 Bourne Shell을 본 따서 만든
+- sch
+- ksh
+- 그외 여러가지
+
+7. 마크에 따른 권환 차이
+
+- $ : 일반 사용자
+- \# : 관리자 사인
+
+8. sudo : 관리자 권한
+
+```bash
+$ sudo mkdir ava
+
+```
+
+- 관리자 권한으로 바꾸기
+
+```bash
+$sudo su - root
+$sudo su -
+$sudo su
+```
+
+9. 리눅스로 통해 가장 먼저 할 일 : 파일 구조 다루기
+
+10. ssh
