20230519 공부 : 예외처리, 리눅스

--- a/학원배운거정리/25주차.md
+++ b/학원배운거정리/25주차.md
@@ -106,3 +106,31 @@ $sudo su
 9. 리눅스로 통해 가장 먼저 할 일 : 파일 구조 다루기
 
 10. ssh
+
+---
+
+## 05.19 금요일
+
+---
+
+1. 예외처리
+
+2. 오류의 종류
+
+- 구문 오류
+- 논리 오류
+- 예외 : 누군가만, 어떤 컴퓨터만, 어떤 상황에서만 예외 적으로 발생하는 오류
+
+3. 응용프로그램을 만드는 쪽이 책임.
+
+4. 어떻게 예외에 대해 알려줄 수 있을가
+
+5. 오류 처리 : 알려주는 것.
+
+6. 예외 객체 : 식별자로만 쓰는 객체
+
+7. 리눅스
+
+- home - 사용자 디렉토리
+- media - 물리 저장소
+- etc - 어플리케이션 설정들 모아놓는 곳(레지스트리)
