20230522 공부 : java Stream, linux

--- a/학원배운거정리/26주차.md
+++ b/학원배운거정리/26주차.md
@@ -37,3 +37,12 @@ public class Program {
 
 3. Function References
 - :: 
+
+4. 원하는 값을 가져오는 것 맵핑 -> 거기서 원하는 값을 추출하는 것 리듀싱
+
+5. 리눅스
+- 폴더 권한
+- 상대방에게 권한을 열어줌으로써 다루게 할 수 있음.
+
+- apt (npm이랑 비슷함.)
+- 파일 관리를 잘 해야 함.
