--- a/학원배운거정리/26주차.md
+++ b/학원배운거정리/26주차.md
@@ -46,3 +46,14 @@ public class Program {
 
 - apt (npm이랑 비슷함.)
 - 파일 관리를 잘 해야 함.
+
+## 05-23 화요일
+
+1. wget - 웹상의 파일 만들기
+
+2. symbolic link - 바로가기 만들기
+
+3. sh - 실행파일
+
+
+
